[package]
name = "fast_poisson"
version = "0.2.0"
authors = ["Travis Veazey <travisvz@gmail.com>"]
edition = "2018"
description = "An implementation of Bridson's algorithm for fast Poisson disk sampling"
repository = "https://github.com/Kromey/fast_poisson"
license-file = "LICENSE"
keywords = ["poisson-disk", "bridson", "distribution", "sampling"]
categories = ["algorithms"]
exclude = ["/.github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.0"
