[package]
name = "fast_poisson"
version = "0.6.0"
authors = ["Travis Veazey <travisvz@gmail.com>"]
rust-version = "1.61"
edition = "2021"
description = "An implementation of Bridson's algorithm for fast Poisson disk sampling"
repository = "https://github.com/Kromey/fast_poisson"
license = "MIT OR Apache-2.0"
keywords = ["poisson-disk", "bridson", "distribution", "sampling"]
categories = ["algorithms"]
exclude = ["/.github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiddo = "2.0.1"
rand = "0.8.4"
rand_xoshiro = "0.6.0"
rand_distr = "0.4.0"
serde = { version = "1.0", package = "serde", features = ["derive"], optional = true }
serde_arrays = { version = "0.1.0", optional = true }

[features]
default = [] # Provide an "empty" default feature for CI
single_precision = []
small_rng = []
derive_serde = ["serde", "serde_arrays"]

[dev-dependencies]
serde_json = "1.0"
